answer 저장 처리