@@ -14,12 +14,15 @@ import org.springframework.web.bind.annotation.RequestParam;
 @RequestMapping("/answer")
 @RequiredArgsConstructor
 public class AnswerController {
+
     private final QuestionService questionService;
+    private final AnswerService answerService;
 
     @PostMapping("/create/{id}")
-    public String createAnswer(Model model, @PathVariable("id") Integer id, @RequestParam String content){
-        Question question = questionService.getQuestion(id);
-        return "redirect:/question/detail/%d".formatted(id);
+    public String createAnswer(Model model, @PathVariable("id") Integer id, @RequestParam String content) {
+        Question question = this.questionService.getQuestion(id);
+        this.answerService.create(question, content);
+        return String.format("redirect:/question/detail/%s", id);
     }
 }
 
